# ESEMods

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
D2.Detours.patches/: CMakeLists.txt
D2.Detours.patches/1.10f/: ESEDamageCalc.patch.cpp  ESEGame.patch.cpp
source/D2CommonESE/: CMakeLists.txt
source/D2CommonESE/D2.Detours.patches/: ESEDamageCalc.patch.cpp
source/D2CommonESE/include/D2Common/: D2Skills_ESE_Intercepts.h
source/D2CommonESE/include/D2Common/Units/: Missile_ESE_Intercepts.h
source/D2CommonESE/src/: main.cpp
source/D2CommonESE/src/D2Common/: D2Skills_ESE_Intercepts.cpp
source/D2CommonESE/src/D2Common/Units/: Missile_ESE_Intercepts.cpp
source/ESEDamageCalc/: CMakeLists.txt
source/ESEDamageCalc/D2.Detours.patches/: ESEDamageCalc.patch.cpp
source/ESEDamageCalc/include/: ESEDamageCalc.h
source/ESEDamageCalc/include/D2Game/MONSTER/: MonsterMode_ESE.h  MonsterMode_ESE_Intercepts.h  MonsterUnique_ESE.h  MonsterUnique_ESE_Intercepts.h
source/ESEDamageCalc/include/D2Game/OBJECTS/: ObjEval_ESE.h  ObjEval_ESE_Intercepts.h
source/ESEDamageCalc/include/D2Game/SKILLS/: SkillAma_ESE_Intercepts.h  SkillAss_ESE_Intercepts.h  SkillBar_ESE.h  SkillBar_ESE_Intercepts.h  SkillDruid_ESE.h  SkillDruid_ESE_Intercepts.h  SkillItem_ESE_Intercepts.h  SkillMonst_ESE.h  SkillMonst_ESE_Intercepts.h  SkillNec_ESE.h  SkillNec_ESE_Intercepts.h  SkillPal_ESE_Intercepts.h  SkillSor_ESE_Intercepts.h  Skills_ESE_Intercepts.h
source/ESEDamageCalc/include/D2Game/UNIT/: SUnitDmg_ESE.h  SUnitDmg_ESE_INTERCEPTS.h  SUnitEvent_ESE.h  SUnitEvent_ESE_Intercepts.h  SUnit_ESE.h  SUnit_ESE_Intercepts.h
source/ESEDamageCalc/include/MISSILES/: MissMode_ESE.h  MissMode_ESE_Intercepts.h
source/ESEDamageCalc/include/MONSTER/: MonsterMode_ESE.h  MonsterMode_ESE_Intercepts.h  MonsterUnique_ESE.h  MonsterUnique_ESE_Intercepts.h
source/ESEDamageCalc/include/OBJECTS/: ObjEval_ESE.h  ObjEval_ESE_Intercepts.h
source/ESEDamageCalc/include/SKILLS/: SkillAma_ESE.h  SkillAma_ESE_Intercepts.h  SkillAss_ESE.h  SkillAss_ESE_Intercepts.h  SkillBar_ESE.h  SkillBar_ESE_Intercepts.h  SkillDruid_ESE.h  SkillDruid_ESE_Intercepts.h  SkillItem_ESE.h  SkillItem_ESE_Intercepts.h  SkillMonst_ESE.h  SkillMonst_ESE_Intercepts.h  SkillNec_ESE.h  SkillNec_ESE_Intercepts.h  SkillPal_ESE.h  SkillPal_ESE_Intercepts.h  SkillSor_ESE.h  SkillSor_ESE_Intercepts.h  Skills_ESE.h  Skills_ESE_Intercepts.h
source/ESEDamageCalc/include/UNIT/: SUnitDmg_ESE.h  SUnitDmg_ESE_INTERCEPTS.h  SUnitEvent_ESE.h  SUnitEvent_ESE_Intercepts.h  SUnit_ESE.h  SUnit_ESE_Intercepts.h
source/ESEDamageCalc/src/: D2GAME_RollElementalDamage_6FD14DD0.cpp  D2GAME_RollPhysicalDamage_6FD14EC0.cpp  ESEDamageCalc.cpp  MISSMODE_RollDamageValue.cpp  MONSTERUNIQUE_CalculatePercentage.cpp  SKILLS_GetMinMaxMasteryDamage.cpp  SUNITDMG_AllocCombat.cpp  SUNITDMG_ApplyDamageBonuses.cpp  SUNITDMG_ApplyResistancesAndAbsorb.cpp  SUNITDMG_CalculateTotalDamage.cpp  SUNITDMG_ExecuteEvents.cpp  SUNITDMG_RollDamageValueInRange.cpp  main.cpp
source/ESEDamageCalc/src/D2Game/MISSILES/: MissMode_ESE.cpp  MissMode_ESE_Intercepts.cpp
source/ESEDamageCalc/src/D2Game/MONSTER/: MonsterMode_ESE.cpp  MonsterUnique_ESE.cpp  MonsterUnique_ESE_Intercepts.cpp
source/ESEDamageCalc/src/D2Game/SKILLS/: SkillAma_ESE.cpp  SkillAma_ESE_Intercepts.cpp  SkillAss_ESE.cpp  SkillAss_ESE_Intercepts.cpp  SkillBar_ESE.cpp  SkillBar_ESE_Intercepts.cpp  SkillDruid_ESE.cpp  SkillItem_ESE.cpp  SkillMonst_ESE.cpp  SkillNec_ESE.cpp  SkillPal_ESE.cpp  SkillSor_ESE.cpp  Skills_ESE.cpp
source/ESEDamageCalc/src/D2Game/UNIT/: SUintDmg_ESE_Intercepts.cpp  SUnitDmg_ESE.cpp  SUnitEvent_ESE.cpp  SUnit_ESE.cpp  SUnit_ESE_Intercepts.cpp
source/ESEDamageCalc/src/MISSILES/: MissMode_ESE.cpp  MissMode_ESE_Intercepts.cpp
source/ESEDamageCalc/src/MONSTER/: MonsterMode_ESE.cpp  MonsterMode_ESE_Intercepts.cpp  MonsterUnique_ESE.cpp  MonsterUnique_ESE_Intercepts.cpp
source/ESEDamageCalc/src/OBJECTS/: ObjEval_ESE.cpp  ObjEval_ESE_Intercepts.cpp
source/ESEDamageCalc/src/SKILLS/: SkillAma_ESE.cpp  SkillAma_ESE_Intercepts.cpp  SkillAss_ESE.cpp  SkillAss_ESE_Intercepts.cpp  SkillBar_ESE.cpp  SkillBar_ESE_Intercepts.cpp  SkillDruid_ESE.cpp  SkillDruid_ESE_Intercepts.cpp  SkillItem_ESE.cpp  SkillItem_ESE_Intercepts.cpp  SkillMonst_ESE.cpp  SkillMonst_ESE_Intercepts.cpp  SkillNec_ESE.cpp  SkillNec_ESE_Intercepts.cpp  SkillPal_ESE.cpp  SkillPal_ESE_Intercepts.cpp  SkillSor_ESE.cpp  SkillSor_ESE_Intercepts.cpp  Skills_ESE.cpp  Skills_ESE_Intercepts.cpp
source/ESEDamageCalc/src/UNIT/: SUintDmg_ESE_Intercepts.cpp  SUnitDmg_ESE.cpp  SUnitEvent_ESE.cpp  SUnitEvent_ESE_Intercepts.cpp  SUnit_ESE.cpp  SUnit_ESE_Intercepts.cpp
source/ESEGame/: CMakeLists.txt
source/ESEGame/include/: ESEGame.h
source/ESEGame/src/: ESEGame.cpp
source/LibESE/: CMakeLists.txt
source/LibESE/include/: ESEDamageCalc.h  LibESE.h
source/LibESE/include/D2Client/: CharScreenDmg_ESE.h  CharScreen_ESE.h  UI_GroundItem_ESE.h  UI_Inv_ESE.h
source/LibESE/include/D2Common/: D2Skills_ESE.h
source/LibESE/include/D2Common/Units/: Missile_ESE.h
source/LibESE/include/D2Game/MISSILES/: MissMode_ESE.h  Missiles_ESE.h
source/LibESE/include/D2Game/MONSTER/: MonsterMode_ESE.h  MonsterUnique_ESE.h
source/LibESE/include/D2Game/SKILLS/: SkillAma_ESE.h  SkillAss_ESE.h  SkillDruid_ESE.h  SkillItem_ESE.h  SkillNec_ESE.h  SkillPal_ESE.h  SkillSor_ESE.h  Skills_ESE.h
source/LibESE/include/D2Game/UNIT/: SUnitDmg_ESE.h  SUnitEvent_ESE.h
source/LibESE/src/: EseDamageCalc.cpp  LibESE.cpp
source/LibESE/src/D2Client/: CharScreenDmg_ESE.cpp  CharScreen_ESE.cpp  UI_GroundItem_ESE.cpp  UI_Inv_ESE.cpp
source/LibESE/src/D2Common/: D2Skills_ESE.cpp
source/LibESE/src/D2Common/Units/: Missile_ESE.cpp
source/LibESE/src/D2Game/MISSILES/: MissMode_ESE.cpp  Missiles_ESE.cpp
source/LibESE/src/D2Game/MONSTER/: MonsterMode_ESE.cpp  MonsterUnique_ESE.cpp
source/LibESE/src/D2Game/OBJECTS/: ObjEval_ESE.cpp
source/LibESE/src/D2Game/SKILLS/: SkillAma_ESE.cpp  SkillAss_ESE.cpp  SkillBar_ESE.cpp  SkillDruid_ESE.cpp  SkillItem_ESE.cpp  SkillMonst_ESE.cpp  (+4 more)
(+71 files in other folders)
